--- a/service/campus/campus.webapp/src/main/webapp/swagger/index.html
+++ b/service/campus/campus.webapp/src/main/webapp/swagger/index.html
@@ -83,7 +83,15 @@
         window.authorizations.add("key", new ApiKeyAuthorization("api_key", key, "query"));
       }
     });
-
+    
+    $('#input_apiVersion').change(function() {
+	    var version = $('#input_apiVersion')[0].value;
+	    log("version: " + version);
+	    if(version && version.trim() != "") {
+	      log("added version " + version);
+	      window.authorizations.add("key", new ApiKeyAuthorization("API-Version", version, "header"));
+	    }
+    });
   });
   </script>
 </head>
@@ -103,7 +111,8 @@
       <div class='input'>
           <select id="input_baseUrl" style="height: 25px;width:420px;"></select>
       </div>
-      <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
+      <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text" value="" style="width:100px"/></div>
+      <div class='input'><input placeholder="API-Version" id="input_apiVersion" name="api_version" type="text" value="1.0" style="width:100px"/></div>
       <div class='input'><a id="explore" href="#">查询</a></div>
     </form>
   </div>
