--- a/service/campus/campus.webapp/src/main/webapp/swagger/index.html
+++ b/service/campus/campus.webapp/src/main/webapp/swagger/index.html
@@ -23,7 +23,6 @@
 
   <script type="text/javascript">
     $(function () {
-
       $.ajax({
             url: 'config.xml',
             method:'get',
@@ -73,8 +72,6 @@
             }
       });
 
-
-
     $('#input_apiKey').change(function() {
       var key = $('#input_apiKey')[0].value;
       log("key: " + key);
@@ -92,7 +89,9 @@
 	      window.authorizations.add("key", new ApiKeyAuthorization("API-Version", version, "header"));
 	    }
     });
+    
   });
+    
   </script>
 </head>
 
@@ -124,9 +123,18 @@
 <script type="text/javascript">
     jQuery(function($) {
         $(document).ready( function() {
+        	init();
             $('#header').stickUp();
         });
     });
+    function init(){
+        var version = $('#input_apiVersion').val();
+        log("version: " + version);
+        if(version && version.trim() != "") {
+          log("added version " + version);
+          window.authorizations.add("key", new ApiKeyAuthorization("API-Version", version, "header"));
+        }
+    }
 </script>
 </body>
 </html>
